--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "flowbite": "^1.5.3",
     "flowbite-react": "^0.3.2",
     "react": "^18.2.0",
+    "react-confirm-alert": "^3.0.6",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-hot-toast": "^2.4.0",
